--- a/main.css
+++ b/main.css
@@ -11,7 +11,14 @@ table, th, tr, td {
 
 h1 {
     text-align: center;
+    vertical-align: middle;
     font-family: calibri;
+}
+
+#header {
+    vertical-align: middle;
+    text-align: center;
+    align-items: center;
 }
 
 #removeP {
